--- a/cats.html
+++ b/cats.html
@@ -10,7 +10,7 @@
     <h2 style="text-align: center;"><b><i>Пород кошек великое множество.
         Большие и маленькие, короткошерстные и пушистые, есть даже совсем лысые кошки.
     <p>На каждую породу находится свой ценитель и каждый владелец кошки с пылом доказывает преимущества именно своей любимой породы.
-    <p>Но ничуть не меньше люди любят и обычных дворовых подкидышей и не удивительно, что именно эти кошки оказываются более ласковыми и преданными. 
+    <p>Но ничуть не меньше люди любят и обычных дворовых подкидышей и не удивительно, что именно эти кошки оказываются более ласковыми 
     <p> Всю свою кошачью жизнь они благодарят своих хозяев за то, что не дали пропасть, за то что дали крышу над головой и миску с вкусной едой.</i></b></p></h2>
     <ul>
         <h1><li><b><u>Пушистый котик</li></b></u></h1>
