--- a/RomeoandJuliet.html
+++ b/RomeoandJuliet.html
@@ -13,7 +13,7 @@
     <main>
         <h1 id="one">Romeo and Juliet</h1>
         <h4 id="two">ACT 1</h4>
-        <h4 id="thr">PROLOGUE</h4>
+        <h4 id="two">PROLOGUE</h4>
         <p>Two households, both alike in dignity,<br>
             In fair Verona,where we lay our scene,<br>
             From ancient grudge break to new mutiny,<br>
@@ -38,7 +38,7 @@
         <h4 id="two">GREGORY</h4>
         <p>No,for then we should be colliers.</p>
     </footer>
-    
+
 </body>
 
 </html>
