--- a/inclasa.html
+++ b/inclasa.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cheetov.css">
+    <link rel="stylesheet" href="css/inclasa.css">
     <title>RitmStyle</title>
 </head>
 <body>
     <!-- Меню -->
     <header>
-       <img src="/Icon/logo.png" alt="logo">
+       <img src="/WEB33-V/Img/logo.png" alt="logo">
         <nav>
             <a href="">Главная</a>
             <a href="">Сеансы</a>
